packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/limit-offset.ttrp
container c(in t, out result) target erp_pg """sql
SELECT id FROM t ORDER BY id LIMIT 10 OFFSET 5
"""
