packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-005.ttrp
// expect: TTRP-SQL-005
container c target erp_pg """sql
SELECT id::int FROM t
"""
